fixes after merging
здесь проект билдится
есть всё, кроме notification-service, minio